Utilizando o Root import. Em vez de usar ../ para chegar a um arquivo, foi criado a configuração para que  quando usarmo assim ~/ o sistema vai entender que queremos partir da pasta src. Outra coisa faltava configurar o prettier por isso ele ta indo junto ao commit

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,9 @@
     "styled-components": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,10 +34,13 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-root-import": "^6.5.0",
+    "customize-cra": "^0.9.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-import-resolver-babel-module": "^5.1.0",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2",
@@ -45,6 +48,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^3.0.0",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "react-app-rewired": "^2.1.5"
   }
 }
