--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.8",
+    "axios": "^0.19.2",
     "immer": "^6.0.3",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
