--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "socket.io-client": "^2.3.0",
     "styled-components": "^5.0.1",
     "yup": "^0.28.3"
   },
