--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.9.0",
-    "@react-native-community/masked-view": "^0.1.8",
+    "@react-native-community/masked-view": "^0.1.9",
     "axios": "^0.19.2",
     "date-fns": "^2.0.0-beta.5",
     "immer": "^6.0.3",
@@ -25,6 +25,7 @@
     "react-native-screens": "^2.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.7",
+    "react-navigation-stack": "^2.3.11",
     "react-navigation-tabs": "^2.8.11",
     "react-redux": "^7.2.0",
     "reactotron-react-native": "^5.0.0",
