--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.9",
+    "@react-navigation/bottom-tabs": "^5.2.7",
+    "@react-navigation/native": "^5.1.6",
+    "@react-navigation/stack": "^5.2.11",
     "axios": "^0.19.2",
     "date-fns": "^2.0.0-beta.5",
     "immer": "^6.0.3",
@@ -22,11 +25,8 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.4.0",
+    "react-native-screens": "^2.5.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.3.7",
-    "react-navigation-stack": "^2.3.11",
-    "react-navigation-tabs": "^2.8.11",
     "react-redux": "^7.2.0",
     "reactotron-react-native": "^5.0.0",
     "reactotron-redux": "^3.1.3",
