--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-brute": "^1.0.1",
+    "express-brute-redis": "^0.0.1",
     "express-handlebars": "^3.1.0",
+    "helmet": "^3.22.0",
     "ioredis": "^4.16.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
