--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express-brute": "^1.0.1",
     "express-brute-redis": "^0.0.1",
     "express-handlebars": "^3.1.0",
+    "express-rate-limit": "^5.1.3",
     "helmet": "^3.22.0",
     "ioredis": "^4.16.3",
     "jsonwebtoken": "^8.5.1",
@@ -31,6 +32,8 @@
     "nodemailer-express-handlebars": "^3.1.0",
     "pg": "^7.18.1",
     "pg-hstore": "^2.3.3",
+    "rate-limit-redis": "^1.7.0",
+    "redis": "^3.0.2",
     "sequelize": "^5.21.3",
     "socket.io": "^2.3.0",
     "youch": "^2.0.10",
